--- a/Demo/View/Home/HomeViewController.xib
+++ b/Demo/View/Home/HomeViewController.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="Demo" customModuleProvider="target">
             <connections>
-                <outlet property="atoneButton" destination="9SR-BQ-yup" id="DKM-UH-Gdq"/>
+                <outlet property="atoneButton" destination="9SR-BQ-yup" id="AEP-5c-gB6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,7 +20,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9SR-BQ-yup">
+                <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9SR-BQ-yup">
                     <rect key="frame" x="88" y="308" width="200" height="50"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
@@ -32,7 +32,7 @@
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
-                        <action selector="didTapAtoneButton:" destination="-1" eventType="touchUpInside" id="UmI-TU-XIs"/>
+                        <action selector="atoneButtonTapped:" destination="-1" eventType="touchUpInside" id="yuX-0X-O8E"/>
                     </connections>
                 </button>
             </subviews>
