--- a/Demo/View/Home/HomeViewController.xib
+++ b/Demo/View/Home/HomeViewController.xib
@@ -32,7 +32,7 @@
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
-                        <action selector="didTapAtoneButton:" destination="-1" eventType="touchUpInside" id="UmI-TU-XIs"/>
+                        <action selector="atoneButtonTapped:" destination="-1" eventType="touchUpInside" id="qks-Qj-xam"/>
                     </connections>
                 </button>
             </subviews>
