--- a/Demo/View/Home/HomeViewController.xib
+++ b/Demo/View/Home/HomeViewController.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="Demo" customModuleProvider="target">
             <connections>
-                <outlet property="atoneButton" destination="9SR-BQ-yup" id="AEP-5c-gB6"/>
+                <outlet property="payButton" destination="9SR-BQ-yup" id="91D-21-LHI"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -32,7 +32,7 @@
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
-                        <action selector="atoneButtonTapped:" destination="-1" eventType="touchUpInside" id="yuX-0X-O8E"/>
+                        <action selector="payButtonTapped:" destination="-1" eventType="touchUpInside" id="v9I-wo-RYE"/>
                     </connections>
                 </button>
             </subviews>
