--- a/Demo/View/Home/HomeViewController.xib
+++ b/Demo/View/Home/HomeViewController.xib
@@ -89,7 +89,7 @@
                     </connections>
                 </button>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RwP-Pg-Uqn">
-                    <rect key="frame" x="62.5" y="577" width="250" height="30"/>
+                    <rect key="frame" x="63" y="100" width="250" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
@@ -98,8 +98,8 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="UvL-FV-RHp" firstAttribute="top" secondItem="9SR-BQ-yup" secondAttribute="bottom" constant="30" id="5Zs-H4-Q48"/>
+                <constraint firstItem="RwP-Pg-Uqn" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="100" id="7Fv-YK-bRV"/>
                 <constraint firstItem="RwP-Pg-Uqn" firstAttribute="width" secondItem="9SR-BQ-yup" secondAttribute="width" id="E2v-qV-lqJ"/>
-                <constraint firstAttribute="bottom" secondItem="RwP-Pg-Uqn" secondAttribute="bottom" constant="60" id="Fuf-Bq-rn7"/>
                 <constraint firstItem="RwP-Pg-Uqn" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="GIm-vy-2nV"/>
                 <constraint firstItem="Vve-qT-ywd" firstAttribute="leading" secondItem="9SR-BQ-yup" secondAttribute="leading" id="b9B-00-B5S"/>
                 <constraint firstItem="Vve-qT-ywd" firstAttribute="trailing" secondItem="9SR-BQ-yup" secondAttribute="trailing" id="qHu-fx-yKl"/>
