--- a/AtoneConDemo/View/Controller/ViewController.xib
+++ b/AtoneConDemo/View/Controller/ViewController.xib
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -26,90 +25,103 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9SR-BQ-yup">
-                    <rect key="frame" x="63" y="308" width="250" height="50"/>
-                    <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="50" id="jBh-m4-Q7n"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                    <state key="normal" title="Atone">
-                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="payButtonTapped:" destination="-1" eventType="touchUpInside" id="v9I-wo-RYE"/>
-                    </connections>
-                </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vve-qT-ywd">
-                    <rect key="frame" x="63" y="223" width="250" height="65"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ey0-ZL-L52">
+                    <rect key="frame" x="37.5" y="216" width="300" height="235"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FbX-tU-nAZ">
-                            <rect key="frame" x="0.0" y="15" width="250" height="50"/>
+                        <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9SR-BQ-yup">
+                            <rect key="frame" x="0.0" y="135" width="300" height="50"/>
+                            <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="jBh-m4-Q7n"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                            <state key="normal" title="Atone">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="payButtonTapped:" destination="-1" eventType="touchUpInside" id="v9I-wo-RYE"/>
+                            </connections>
+                        </button>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RwP-Pg-Uqn">
+                            <rect key="frame" x="0.0" y="0.0" width="300" height="30"/>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                        </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UvL-FV-RHp">
+                            <rect key="frame" x="135" y="205" width="30" height="30"/>
+                            <connections>
+                                <action selector="resetTokenButtonTapped:" destination="-1" eventType="touchUpInside" id="Tpl-xz-5gK"/>
+                            </connections>
+                        </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vve-qT-ywd">
+                            <rect key="frame" x="0.0" y="50" width="300" height="65"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SBc-Vu-cTT">
-                                    <rect key="frame" x="0.0" y="15" width="250" height="35"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FbX-tU-nAZ">
+                                    <rect key="frame" x="0.0" y="15" width="300" height="50"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SBc-Vu-cTT">
+                                            <rect key="frame" x="0.0" y="15" width="300" height="35"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="SBc-Vu-cTT" secondAttribute="bottom" id="0Rr-4U-Dpc"/>
+                                        <constraint firstAttribute="trailing" secondItem="SBc-Vu-cTT" secondAttribute="trailing" id="CP0-R1-OEf"/>
+                                        <constraint firstItem="SBc-Vu-cTT" firstAttribute="leading" secondItem="FbX-tU-nAZ" secondAttribute="leading" id="E3R-ni-mi8"/>
+                                        <constraint firstItem="SBc-Vu-cTT" firstAttribute="top" secondItem="FbX-tU-nAZ" secondAttribute="top" constant="15" id="okF-TM-D1A"/>
+                                    </constraints>
+                                </view>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dpc-FO-gGI">
+                                    <rect key="frame" x="129" y="0.0" width="42" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="30" id="FV9-7Q-IOH"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="bottom" secondItem="SBc-Vu-cTT" secondAttribute="bottom" id="0Rr-4U-Dpc"/>
-                                <constraint firstAttribute="trailing" secondItem="SBc-Vu-cTT" secondAttribute="trailing" id="CP0-R1-OEf"/>
-                                <constraint firstItem="SBc-Vu-cTT" firstAttribute="leading" secondItem="FbX-tU-nAZ" secondAttribute="leading" id="E3R-ni-mi8"/>
-                                <constraint firstItem="SBc-Vu-cTT" firstAttribute="top" secondItem="FbX-tU-nAZ" secondAttribute="top" constant="15" id="okF-TM-D1A"/>
+                                <constraint firstItem="dpc-FO-gGI" firstAttribute="centerX" secondItem="Vve-qT-ywd" secondAttribute="centerX" id="0ts-js-UtX"/>
+                                <constraint firstAttribute="height" constant="65" id="36m-xz-a1r"/>
+                                <constraint firstItem="dpc-FO-gGI" firstAttribute="top" secondItem="Vve-qT-ywd" secondAttribute="top" id="EzJ-Ge-IpZ"/>
+                                <constraint firstAttribute="trailing" secondItem="FbX-tU-nAZ" secondAttribute="trailing" id="FMo-ig-qfI"/>
+                                <constraint firstItem="FbX-tU-nAZ" firstAttribute="leading" secondItem="Vve-qT-ywd" secondAttribute="leading" id="QOu-d6-twr"/>
+                                <constraint firstItem="FbX-tU-nAZ" firstAttribute="top" secondItem="Vve-qT-ywd" secondAttribute="top" constant="15" id="e2G-bQ-xaN"/>
+                                <constraint firstAttribute="bottom" secondItem="FbX-tU-nAZ" secondAttribute="bottom" id="tkZ-y8-mEb"/>
                             </constraints>
                         </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dpc-FO-gGI">
-                            <rect key="frame" x="104" y="0.0" width="42" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="30" id="FV9-7Q-IOH"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="dpc-FO-gGI" firstAttribute="centerX" secondItem="Vve-qT-ywd" secondAttribute="centerX" id="0ts-js-UtX"/>
-                        <constraint firstAttribute="height" constant="65" id="36m-xz-a1r"/>
-                        <constraint firstItem="dpc-FO-gGI" firstAttribute="top" secondItem="Vve-qT-ywd" secondAttribute="top" id="EzJ-Ge-IpZ"/>
-                        <constraint firstAttribute="trailing" secondItem="FbX-tU-nAZ" secondAttribute="trailing" id="FMo-ig-qfI"/>
-                        <constraint firstItem="FbX-tU-nAZ" firstAttribute="leading" secondItem="Vve-qT-ywd" secondAttribute="leading" id="QOu-d6-twr"/>
-                        <constraint firstItem="FbX-tU-nAZ" firstAttribute="top" secondItem="Vve-qT-ywd" secondAttribute="top" constant="15" id="e2G-bQ-xaN"/>
-                        <constraint firstAttribute="bottom" secondItem="FbX-tU-nAZ" secondAttribute="bottom" id="tkZ-y8-mEb"/>
+                        <constraint firstAttribute="trailing" secondItem="Vve-qT-ywd" secondAttribute="trailing" id="4Vr-uq-eGD"/>
+                        <constraint firstAttribute="bottom" secondItem="UvL-FV-RHp" secondAttribute="bottom" id="9l9-lx-2Tp"/>
+                        <constraint firstItem="9SR-BQ-yup" firstAttribute="leading" secondItem="ey0-ZL-L52" secondAttribute="leading" id="PgY-mL-xjW"/>
+                        <constraint firstItem="9SR-BQ-yup" firstAttribute="top" secondItem="Vve-qT-ywd" secondAttribute="bottom" constant="20" id="R5l-qT-G2Y"/>
+                        <constraint firstAttribute="height" constant="235" id="Tvc-Ys-CHz"/>
+                        <constraint firstAttribute="width" constant="300" id="WMb-Tl-FHs"/>
+                        <constraint firstItem="Vve-qT-ywd" firstAttribute="top" secondItem="RwP-Pg-Uqn" secondAttribute="bottom" constant="20" id="XaK-Dv-b2o"/>
+                        <constraint firstItem="RwP-Pg-Uqn" firstAttribute="top" secondItem="ey0-ZL-L52" secondAttribute="top" id="fvw-Is-RuK"/>
+                        <constraint firstItem="UvL-FV-RHp" firstAttribute="centerX" secondItem="ey0-ZL-L52" secondAttribute="centerX" id="pQb-CL-LXi"/>
+                        <constraint firstItem="RwP-Pg-Uqn" firstAttribute="leading" secondItem="ey0-ZL-L52" secondAttribute="leading" id="qAo-ue-WVb"/>
+                        <constraint firstAttribute="trailing" secondItem="RwP-Pg-Uqn" secondAttribute="trailing" id="qFM-NN-ecW"/>
+                        <constraint firstItem="Vve-qT-ywd" firstAttribute="leading" secondItem="ey0-ZL-L52" secondAttribute="leading" id="tcu-3Y-0sP"/>
+                        <constraint firstItem="UvL-FV-RHp" firstAttribute="top" secondItem="9SR-BQ-yup" secondAttribute="bottom" constant="20" id="w4G-Zp-AWd"/>
+                        <constraint firstAttribute="trailing" secondItem="9SR-BQ-yup" secondAttribute="trailing" id="z9S-MR-aMa"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UvL-FV-RHp">
-                    <rect key="frame" x="172.5" y="388" width="30" height="30"/>
-                    <connections>
-                        <action selector="resetTokenButtonTapped:" destination="-1" eventType="touchUpInside" id="Tpl-xz-5gK"/>
-                    </connections>
-                </button>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RwP-Pg-Uqn">
-                    <rect key="frame" x="63" y="60" width="250" height="30"/>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                </textField>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="UvL-FV-RHp" firstAttribute="top" secondItem="9SR-BQ-yup" secondAttribute="bottom" constant="30" id="5Zs-H4-Q48"/>
-                <constraint firstItem="RwP-Pg-Uqn" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="60" id="7Fv-YK-bRV"/>
-                <constraint firstItem="RwP-Pg-Uqn" firstAttribute="width" secondItem="9SR-BQ-yup" secondAttribute="width" id="E2v-qV-lqJ"/>
-                <constraint firstItem="RwP-Pg-Uqn" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="GIm-vy-2nV"/>
-                <constraint firstItem="Vve-qT-ywd" firstAttribute="leading" secondItem="9SR-BQ-yup" secondAttribute="leading" id="b9B-00-B5S"/>
-                <constraint firstItem="Vve-qT-ywd" firstAttribute="trailing" secondItem="9SR-BQ-yup" secondAttribute="trailing" id="qHu-fx-yKl"/>
-                <constraint firstItem="9SR-BQ-yup" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="raX-jM-Vzy"/>
-                <constraint firstItem="UvL-FV-RHp" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ryJ-OY-UK6"/>
-                <constraint firstItem="9SR-BQ-yup" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="tNL-zI-1JO"/>
-                <constraint firstItem="9SR-BQ-yup" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="2:3" id="wEH-P7-o24"/>
-                <constraint firstItem="9SR-BQ-yup" firstAttribute="top" secondItem="Vve-qT-ywd" secondAttribute="bottom" constant="20" id="yGa-ir-HoL"/>
+                <constraint firstItem="ey0-ZL-L52" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="q5r-Bp-jY9"/>
+                <constraint firstItem="ey0-ZL-L52" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="qoh-WQ-Ddd"/>
             </constraints>
-            <point key="canvasLocation" x="-1103" y="-347"/>
+            <point key="canvasLocation" x="-1350.5" y="-385.5"/>
         </view>
     </objects>
 </document>
