--- a/AtoneConDemo/View/Controller/ViewController.xib
+++ b/AtoneConDemo/View/Controller/ViewController.xib
@@ -46,7 +46,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="300" height="30"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            <textInputTraits key="textInputTraits"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UvL-FV-RHp">
                             <rect key="frame" x="135" y="205" width="30" height="30"/>
